feat(batch): 트랜잭션 경계 분리로 MVCC 가시성 문제 해결 + 대량 적용 안정화
- Orchestrator: 장기 @Transactional 제거, lockStart/mark*만 짧게 트랜잭션으로 유지
- 산출 단계: REQUIRES_NEW 병렬 커밋 적용
- 적용 단계: REQUIRES_NEW + READ_COMMITTED 에서 최신 스냅샷 기반 조회
- 페이지네이션: OFFSET 제거, id > :afterId 방식으로 안정적 처리
- 인덱스: badge_results / level_results (execution_id, status, id), badges (user_id, active, updated_at) 추가